tests/NormalTests/paczka1/fuzzy1/97845021.err
Error in line 1: S890 S839 45,1
Error in line 9: CnSHk S928 31,3
Error in line 31: DPR A782 20,7
